helm/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/service-weights: |
      go-app: 99%
      go-app-canary: 1%
  name: go-app-ingress
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: go-app
          servicePort: 80
        path: /
      - backend:
          serviceName: go-app-canary
          servicePort: 80
        path: /
